# hiv_modelling

./: README.md  cleaning.py  data.xlsx  forecast_results_2024_2028.csv  model.py  readme.md  requirements.txt  utilities.py  visualization.py
data/: .~lock.cleaned_enrollments.csv#  cleaned_enrollments.csv  data.xlsx  forecast_results_2024_2028.csv
docs/: cleaning.md
hiv_modelling/: LICENSE  Makefile  README.md  pyproject.toml
hiv_modelling/docs/: mkdocs.yml
hiv_modelling/docs/docs/: index.md
hiv_modelling/hiv_modelling/: __init__.py  dataset.py  features.py  plots.py
hiv_modelling/hiv_modelling/modeling/: predict.py  train.py
saved_models/: feature_scaler.pkl  gb_model.pkl
tables/: ensemble_input_gradient_boosting_predictions.csv  ensemble_input_random_forest_predictions.csv  ensemble_input_weighted_average_predictions.csv  full_predictions_comparison.csv  predictions_summary_statistics.csv
