[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hiv_modelling"
version = "0.0.1"
description = "Invidual (exponential, logistic, richards and gompertz) and ensemble models to predict and forecast hiv cases based on data collected from various clinics"
authors = [
  { name = "owenstack" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["hiv_modelling"]
include = ["pyproject.toml", "hiv_modelling/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hiv_modelling"]
force-sort-within-sections = true

